# pi-project

./: .gitignore  README.md  eq_mp3.py  main.py  mp3_player.py  pyproject.toml
